--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-sidenav></app-sidenav>
+<div class="container">
+    <app-toolbar></app-toolbar>
+    <app-sidenav class="toolbar-sidenav"></app-sidenav>
+</div>
